kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend-app
        image: kevinmz/app-frontend:v0.6
        imagePullPolicy: Always
        # resources:
        #   limits:
        #     memory: "1Gi"
        #     cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: backend-app
        image: kevinmz/app-backend:v0.3
        imagePullPolicy: Always
        # resources:
        #   limits:
        #     memory: "1Gi"
        #     cpu: "500m"
        ports:
        - containerPort: 8080
