kubernetes/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 2
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
      - name: postgres-volume
        persistentVolumeClaim:
          claimName: postgres-pvc
      containers:
      - name: postgres
        image: kevinmz/app-db:v0.1
        # resources:
        #   limits:
        #     memory: "1Gi"
        #     cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-volume
          mountPath: /var/lib/postgresql/data
          
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
