kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-service
spec:
  selector:
    app: frontend-app
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: backend-app-service
spec:
  selector:
    app: backend-app
  ports:
  - port: 8080
    targetPort: 8080
