kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: go-react-app.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-app-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-app-service
            port:
              number: 8080
